# eye-cursor

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera_capture.cpp  eyelib.cpp  eyelib.hpp  makefile
tests/: Makefile  download_images.py  run_tests  run_tests.cpp
tests/test_classes/: center_tests.cpp  center_tests.hpp  pupil_tests.cpp  pupil_tests.hpp  testcase.cpp  testcase.hpp
tests/test_images/eye_images/: test_data.json
tests/test_images/muct_faces/: .gitignore  labels.json
